samples/_failures_safe/1761075827_99b6fb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_01190783.c: In function ‘main’:
./samples/SAFE/__tmp_01190783.c:138:5: error: expected expression at end of input
  138 |     if (compressed_size ==
      |     ^~
./samples/SAFE/__tmp_01190783.c:138:5: error: expected declaration or statement at end of input
